Make sure shared issue button stays visible and still works after solving when multiple solutions enabled

--- a/plugins/discourse-solved/assets/stylesheets/solutions.scss
+++ b/plugins/discourse-solved/assets/stylesheets/solutions.scss
@@ -111,6 +111,7 @@ $solved-color: var(--success);
 
 .accepted-answers {
   margin-left: var(--topic-body-width-padding);
+  margin-bottom: 0.5em;
 
   & .d-post-excerpt-accordion {
     &__header {
